--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,16 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
-
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
-
 # When adding additional environment variables, the schema in "/src/env.js"
 # should be updated accordingly.
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
-
+DATABASE_URL='mysql://agmkmavpl6u9pw4dwqqa:pscale_pw_caObHrSncui0LJ2NzWpJDdfsHa1pqP5bYCcsDFBAE8K@aws.connect.psdb.cloud/music-media?sslaccept=strict'
 # Next Auth
 # You can generate a new secret on the command line with:
 # openssl rand -base64 32
 # https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=""
+NEXTAUTH_SECRET="En7fAN93wV/8JLYiQJnk7YTTpxE+pGzDSRZZS19ffeY="
 NEXTAUTH_URL="http://localhost:3000"
 
 # Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+DISCORD_CLIENT_ID="1214038973605871668"
+DISCORD_CLIENT_SECRET="vKcIAwPxFtj-uWKvZEih7OT91MsLI_k5"
